# DSA

./: Binary_Tree.cpp  CMakeLists.txt  README.md
Algo/: .gitignore  CMakeLists.txt  README.md
Algo/Notes/: sorting.md
Algo/homeworks/01_sorting/: 1_insertion_sort.cpp
Algo/homeworks/01_sorting/01_hw_2_6Easy/: 01_Leetcode_1200_Minimum_Absolute_me.cpp  03_LeetCode_561_Partition_me.cpp
Algo/homeworks/01_sorting/HW2-6Easy/: 02_LeetCode_976_Triangle_me.cpp  04_LeetCode_280_Wiggle_Sort.cpp  04_LeetCode_280_Wiggle_Sort_me.cpp  06_LeetCode_1005_K_Negations_me.cpp
Algo/homeworks/02_Binary_Search/03_hw_4_3Medium/: 02_spoj_pie_me.cpp
Algo/homeworks/03_graph_p1/02_DFS/02_hw_2_4Med/: 03_LeetCode_1254_ClosedIslands.cpp
Algo/practice/00_get_started/: README.md
Algo/practice/01_sorting/01_insertion_sort/: 01_insertion_sort.cpp  01_insertion_sort_me.cpp  02_insertion_sort.cpp  notes.md
Algo/practice/01_sorting/02_stl_sort/: 01_stl_usage.cpp  02_with_objs.cpp  notes.md
Algo/practice/01_sorting/03_selection_sort/: 01_selection.cpp  01_selection_me1.cpp  02_selection_me2.cpp  notes.md
Algo/practice/01_sorting/04_count_sort/: 01_count_sort.cpp  notes.md
Algo/practice/02_binary_search/: 01_binary_search.cpp  03_LeetCode_441_Coins_me.cpp  05_LeetCode_1482_bouquet_me.cpp  06_fx.cpp  07_spoj_pie_me.cpp  notes.md
Algo/practice/02_binary_search/01_bs_basics/: 02_stl.cpp  notes.md
Algo/practice/02_binary_search/02_bs_generalization/: 03_LeetCode_441_Coins.cpp  notes.md
Algo/practice/02_binary_search/03_bs_on_real_values/: 06_just_FYI.cpp  notes.md
Algo/practice/03_graph_p1/: 01_graph.cpp  graph.md
Algo/practice/03_graph_p1/01_adjaceny_matrix_repr/: 02_undirected_graph_for_weights.cpp
Algo/practice/03_graph_p1/01_graph_repr/: graph_repr.md
Algo/practice/03_graph_p1/01_graph_repr/01_adjaceny_matrix_repr/: 01_directed_graph_for_edges.cpp
Algo/practice/03_graph_p1/01_graph_repr/02_adjaceny_list_repr/: 01_directed_graph_for_edges.cpp  02_undirected_graph_for_weights.cpp
Algo/practice/03_graph_p1/02_DFS/: notes.md
Algo/practice/03_graph_p1/02_DFS/01_DFS/: 01_dfs.cpp  01_dfs_me.cpp
Algo/practice/03_graph_p1/02_DFS/02_DFS_Matrix/: 01_LeetCode_690_employee.cpp  01_LeetCode_690_employee_me.cpp  LeetCode_733_me.cpp
Algo/practice/03_graph_p1/02_adjaceny_list_repr/: 01_directed_graph_for_edges.cpp
DS/: .gitignore  AVL.cpp  Binary_Search_Tree.cpp  Binary_Tree.cpp  CMakeLists.txt  README.md  a.out  binary_heap.cpp  singly_linkedList.cpp  vector.cpp
DS/homeworks/01_vector/: del_a_pos.cpp  improved_search.cpp  left_rotation.cpp  right_rotation.cpp  right_rotation_steps.cpp
DS/homeworks/03_singly_linkedList/SLL-HW1-6Easy/: 01_destructor.cpp  02_insert_front.cpp  03_delete_front.cpp  04_get_nth_back.cpp  05_is_same_list_data.cpp  06_linked_list_without_tail_length.cpp
DS/homeworks/05_proj1_sparse_matrix/: sparse_matrix.cpp
DS/homeworks/07_queue/Queue_HW1_4Easy_Med/: 01_deque.cpp
DS/homeworks/08_Binary_Tree/BT_HW1_6Easy/: 01_tree_max.cpp  3_leetcode_112_path_sum_v2.cpp  4_leetcode_404_sum_left_leaves.cpp  5_leetcode_993_cousins_v1.cpp  5_leetcode_993_cousins_v2.cpp  P_Leetcode_1448_count_good_nodes_BT.cpp  P_is_full.cpp
DS/homeworks/08_Binary_Tree/BT_HW2_3Med-Hard/: 1_leetcode_103_Zigzag.cpp  3_leetcode_543_diameter_long.cpp  3_leetcode_543_diameter_short.cpp
DS/homeworks/09_Binary_Search_Trees/BST_HW1_2Easy/: 2_leetcode_108_conver_bst.cpp
DS/homeworks/09_Binary_Search_Trees/BST_HW2_3Med/: 1_leetcode_98_is_bst.cpp  3_leetcode_235_lca.cpp
DS/homeworks/09_Binary_Search_Trees/BST_HW3_3Med/: 1_leetcode_1008_bst_preorder_2_ranges_next_greater.cpp
DS/homeworks/10_Binary_Heap/BH_HW1_5Easy_Med/: 05_heap_sort.cpp
DS/homeworks/13_Hashing/Hash_HW1_5Med/: p1_p2_p3.cpp
DS/practise/: Binary_Tree.cpp  Binary_Tree_design2.cpp  STL.cpp  a.out  bin_heap.cpp  circular_queue.cpp  dll.cpp  queue_based_array.cpp  queue_based_linkedlist.cpp  return_ref_val.cpp  singly_liskedlist.cpp  stack_based_array.cpp  vector.cpp
DS/practise/New folder/: Binary_Tree.cpp  binary_heap.cpp  hashtable.cpp
homeworks/01_vector/: del_a_pos.cpp  improved_search.cpp
homeworks/03_singly_linkedList/SLL-HW1-6Easy/: 03_delete_front.cpp  04_get_nth_back.cpp  05_is_same_list_data.cpp
homeworks/08_Binary_Tree/BT_HW1_6Easy/: 01_tree_max.cpp  02_tree_height.cpp  1_tree_max.cpp  2_leetcode_104_depth.cpp  3_leetcode_112_path_sum_v1.cpp  3_leetcode_112_path_sum_v2.cpp  4_leetcode_404_sum_left_leaves.cpp  6_is_perfect.cpp  6_is_perfect_v2.cpp  P_Leetcode_1448_count_good_nodes_BT.cpp  P_is_full.cpp
homeworks/08_Binary_Tree/BT_HW2_6Med-Hard/: 1_leetcode_103_Zigzag.cpp
practise/: Binary_Tree.cpp  Binary_Tree_design1.cpp  Binary_Tree_design2.cpp  circular_queue.cpp  return_ref_val.cpp  stack_based_LinkedList.cpp  vector.cpp
